<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_below="@+id/scrollView">

            <TextView
                android:text="Experience Sampling Application"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_message"
                android:layout_marginTop="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="24sp"
                android:textAlignment="center" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Email"
                    android:id="@+id/email_input" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/password_input"
                    android:hint="Password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="Login"
                android:background="@color/colorPrimary"
                android:textColor="@color/buttonTextAccent" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="Or create a new account"
                android:gravity="center"
                android:textAllCaps="false"
                android:background="#00ffffff"
                android:textStyle="normal"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>