...
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.madiskar.experiencesamplingapp.activities.QuestionnaireActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/nextquestionbutton"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonTextAccent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

...
