<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Experience Sampler</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="studyActivity">My Studies</string>
    <string name="submit_answer">Submit</string>
    <string name="menu_settings">settings</string>
    <string name="start_time">Beepfree period start time</string>
    <string name="end_time">Beepfree period end time</string>
    <string name="disable_beepfree">Disable</string>
    <string name="edit_beepfree">Edit</string>
    <string name="add_beepfree">Add new</string>
...
